fix(base.css):hide icons on small screen (#373)

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -134,7 +134,9 @@ p {
     padding-right: 0;
   }
 }
-
+@media (max-width:599px){
+  .hidesmall {display:none!important;}
+  }
 @media only screen and (min-width: 320px) and (max-width: 768px) {
   .hamburger-menu {
     padding-right: 0;
